Added some content to contact.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 Peyton Graham
             </div>
             <div class="titleLinks">
-                <a href="/index.html">About</a>&nbsp&nbsp&nbsp
-                <a href="/contact.html">Portfolio</a>&nbsp&nbsp&nbsp
-                <a href="/portfolio.html">Contact</a>
+                <a href="https://pxgraham.github.io/Basic-Portfolio/index.html">About</a>&nbsp&nbsp&nbsp
+                <a href="https://pxgraham.github.io/Basic-Portfolio/contact.html">Portfolio</a>&nbsp&nbsp&nbsp
+                <a href="https://pxgraham.github.io/Basic-Portfolio/portfolio.html">Contact</a>
             </div>
         </div>
     </div>
