--- a/contact.html
+++ b/contact.html
@@ -27,23 +27,20 @@
         </div>
         <br>
         <hr>
-        <div class="bodyTitle">       
-            <img src="assets/images/me.jpg" width="100%" height="100%">
-        </div>
-        <div class="bodyTitleText">
-            I have been interested in coding since I was very young. Learning about how computer's think and act really intrigues me.
-            Simple website design is something that I find fun but can also be tedious. One of my main goals is to create useful and functional
-            systems that everyone can benefit from in some way. I've been an end user my entire life, and I would like to make my life(and other end user's) lifes better
-            by becoming a developer myself.
+        <div class="bodystuff">
+            <p>Name</p>
+            <input class="box" type="name" placeholder="John Smith"/>
+            <p>Email</p>
+            <input class="box" type="email" placeholder="example@domain.com"/>
+            <p>Message</p>
+            <textarea rows="10" cols="125"></textarea>
+            <br>
 
+            <input id="btn" type="submit" />            
         </div>
-        <p class="bodyText">
-            Ontop of loving coding and computers, I also love video games. Besides working, sleeping, eating, and coding, most of my free time
-            goes towards League of Legends and Dark Souls. I also play Runescape and Fortnite but this list can go on and on.
-            I have also developed a couple javascript games which are very incomplete, but as far as my dreams go, I don't think they will ever be complete.
-            As far as I'm concerned, there is no such thing as perfection, yet I try and try to get my perfect idea in to the real world.
-        </p>
     </div>
+
+
 
     <div class="footer">
         <div class="footerA">
@@ -53,6 +50,7 @@
             Copyright
         </div>
     </div>
+
 
 </body>
 </html>
