fixed html validator issues

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
                 Peyton Graham
             </div>
             <div class="titleLinks">
-                <a href="https://pxgraham.github.io/Basic-Portfolio/index.html">About</a>&nbsp&nbsp&nbsp
-                <a href="https://pxgraham.github.io/Basic-Portfolio/portfolio.html">Portfolio</a>&nbsp&nbsp&nbsp
+                <a href="https://pxgraham.github.io/Basic-Portfolio/index.html">About</a>&nbsp;&nbsp;&nbsp;
+                <a href="https://pxgraham.github.io/Basic-Portfolio/portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;
                 <a href="https://pxgraham.github.io/Basic-Portfolio/contact.html">Contact</a>
             </div>
         </div>
@@ -29,7 +29,7 @@
         <hr>
         <div class="bodystuff">
             <p>Name</p>
-            <input class="box" type="name" placeholder="John Smith"/>
+            <input class="box" type="text" placeholder="John Smith"/>
             <p>Email</p>
             <input class="box" type="email" placeholder="example@domain.com"/>
             <p>Message</p>
