--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
                 Peyton Graham
             </div>
             <div class="titleLinks">
-                <a href="https://pxgraham.github.io/Basic-Portfolio/index.html">About</a>&nbsp&nbsp&nbsp
-                <a href="https://pxgraham.github.io/Basic-Portfolio/portfolio.html">Portfolio</a>&nbsp&nbsp&nbsp
+                <a href="https://pxgraham.github.io/Basic-Portfolio/index.html">About</a>&nbsp;&nbsp;&nbsp;
+                <a href="https://pxgraham.github.io/Basic-Portfolio/portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;
                 <a href="https://pxgraham.github.io/Basic-Portfolio/contact.html">Contact</a>
             </div>
         </div>
@@ -29,7 +29,7 @@
         <br>
         <hr>
         <div class="bodyTitle">       
-            <img src="assets/images/me.jpg" width="100%" height="100%">
+            <img src="assets/images/me.jpg" alt="image of Peyton" width="225" height="150">
         </div>
         <div class="bodyTitleText">
             I know this page is kind of incomplete. Check out my game below if you'd like!
